# Comic-Encoder

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  logger.rs  main.rs
src/actions/: compile.rs  decode.rs  encode_one.rs  mod.rs
src/cli/: clap.yml  decode.rs  encode.rs  error.rs  mod.rs  opts.rs  rebuild.rs  volumify.rs
src/lib/: build_vol.rs  calc.rs  deter.rs  images.rs  mod.rs  natsort.rs  readdir.rs
