[package]
name = "comic-encoder"
version = "1.0.0"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33.0", features = [ "yaml" ] }
log = "0.4.8"
fern = { version = "0.5.9", features = [ "colored" ] }
zip = "0.5.4"
pdf = { git = "https://github.com/pdf-rs/pdf.git" }
