[package]
name = "comic-encoder"
version = "2.0.0"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
description = "Software for building and extracting comic archives"
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.1" }
log = "0.4.8"
fern = { version = "0.6.0", features = [ "colored" ] }
zip = "0.5.6"
pdf = { git = "https://github.com/pdf-rs/pdf.git" }

[[bin]]
name = "comic-enc"
path = "src/main.rs"
